--- a/Client/index.html
+++ b/Client/index.html
@@ -2,13 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link
-      rel="icon"
-      href="https://logowik.com/content/uploads/images/shop-app6999.jpg"
-      style="object-fit: cover; width: 50px; height: 50px; border-radius: 100%"
-    />
+    <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Fake Shop</title>
+    <title>Mini Shop</title>
   </head>
   <body>
     <div id="root"></div>
